* Basic kaltura playlist iframe support ( does not do fancy iframe cache of payload like single player ( but basically working ) ** adjusted flashvars passing ** added postEmbedJS test for presence of vid tag in nativeEmbed * Removed integrationTest folder ( to be hosted outside of the svn ) * Updated localSettings.php.sample to include mention of   wgAllowCustomResourceIncludes configuration option ( disabled by default ) ** Custom resource injection since it allows resource injection, and if your KMC accounts were not sequre and you are not running the html5 on a separate subdomain, could result in XSS issues.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2037 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -14,7 +14,15 @@ $wgEnableIframeApi = true;
 
 $wgEnableIpadHTMLControls = true;
 $wgKalturaUseManifestUrls = true;
-$wgAllowRemoteKalturaService = true;
+
+// Allows remote kaltura service queries from php ( usefull for onPrem or CE editions using the iframe )
+$wgAllowRemoteKalturaService = false;
+
+// Allows custom resources to be loaded from the ui-conf, useful for custom plugins, 
+// DO NOT enable this if you have other services on the same domain as the iframe as it essentially
+// allows any ui-conf user to include javascript on the iframe player page
+$wgAllowCustomResourceIncludes = false;
+
 
 $wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText', 'FreeWheel' );
 ?>
